--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <video autoplay muted loop>
-    <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+    <source src="linmy.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 
