--- a/index.html
+++ b/index.html
@@ -2,128 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scroll Softly</title>
+  <title>Scroll Softly, You Are In My Space</title>
   <style>
-    * {
-      box-sizing: border-box;
+    body {
       margin: 0;
-      padding: 0;
-    }
-
-    body, html {
-      height: 100%;
-      overflow: hidden;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0f0f0f;
       color: white;
-    }
-
-    video.bg-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
-    }
-
-    .navbar {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      display: flex;
-      gap: 20px;
-      z-index: 10;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      font-size: 1.2rem;
-      padding: 8px 12px;
-      transition: transform 0.3s ease, background 0.3s ease;
-      border-radius: 8px;
-    }
-
-    .navbar a:hover {
-      transform: scale(1.2);
-      background: rgba(255, 255, 255, 0.2);
-    }
-
-    .center-heading {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 2.5rem;
-      font-weight: bold;
-      padding: 20px;
-      border-radius: 20px;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      transition: all 0.3s ease;
-      cursor: pointer;
-      user-select: none;
     }
 
-    .message-box {
-      position: absolute;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
+    nav {
+      display: flex;
+      justify-content: left;
       padding: 15px 25px;
-      border-radius: 15px;
-      font-size: 1.2rem;
-      display: none;
-      z-index: 5;
+      background-color: #1a1a1a;
+      font-size: 1.1em;
+    }
+
+    nav a {
+      color: white;
+      margin-right: 20px;
+      text-decoration: none;
+      transition: transform 0.2s ease;
+    }
+
+    nav a:hover {
+      transform: scale(1.15);
+      color: #ffd700;
+    }
+
+    h1 {
+      margin-top: 120px;
+      font-size: 2.5em;
+      transition: transform 0.4s ease;
+      cursor: pointer;
+      display: inline-block;
+    }
+
+    .message {
+      margin-top: 20px;
+      font-size: 1.1em;
+      color: #bbbbbb;
+      min-height: 20px;
     }
   </style>
 </head>
 <body>
-  <video class="bg-video" autoplay muted loop>
-    <source src="linmy.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-  </video>
 
-  <!-- Navbar -->
-  <div class="navbar">
+  <!-- Top Navigation -->
+  <nav>
+    <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
     <a href="#">About</a>
     <a href="#">Inspiring</a>
-  </div>
+  </nav>
 
-  <!-- Center Heading -->
-  <div class="center-heading" id="mainText">Scroll Softly, You Are In My Space</div>
-  <div class="message-box" id="messageBox"></div>
+  <!-- Centered Animated Heading -->
+  <h1 id="heading">Scroll Softly, You Are In My Space</h1>
+  <div class="message" id="msg"></div>
 
   <script>
+    const heading = document.getElementById("heading");
+    const msg = document.getElementById("msg");
     const messages = [
-      "Oh no, you can't touch me!",
-      "Try again? Not so easy!",
-      "Oops! Missed again!",
-      "You're persistent, I like it!"
+      "Oh no, you can't touch me ✋",
+      "Catch me if you can!",
+      "Not so easy, huh?",
+      "Try again... 😄"
     ];
 
-    let messageIndex = 0;
-    const heading = document.getElementById('mainText');
-    const messageBox = document.getElementById('messageBox');
+    heading.addEventListener("click", () => {
+      const x = Math.random() * (window.innerWidth - 300);
+      const y = Math.random() * (window.innerHeight - 100);
+      heading.style.transform = `translate(${x}px, ${y}px)`;
 
-    heading.addEventListener('mouseover', () => {
-      heading.style.left = Math.random() * 80 + '%';
-      heading.style.top = Math.random() * 80 + '%';
-
-      messageBox.textContent = messages[messageIndex];
-      messageBox.style.display = 'block';
+      const randomMsg = messages[Math.floor(Math.random() * messages.length)];
+      msg.textContent = randomMsg;
 
       setTimeout(() => {
-        messageBox.style.display = 'none';
-        heading.style.left = '50%';
-        heading.style.top = '50%';
-      }, 2000);
-
-      messageIndex = (messageIndex + 1) % messages.length;
+        heading.style.transform = `translate(0, 0)`;
+        msg.textContent = "";
+      }, 3000);
     });
   </script>
 </body>
