--- a/index.html
+++ b/index.html
@@ -2,90 +2,130 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Scroll Softly, You Are In My Space</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Linisha's Interactive Page</title>
   <style>
-    body {
+    * {
       margin: 0;
-      background-color: #0f0f0f;
-      color: white;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body, html {
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-    }
-
-    nav {
-      display: flex;
-      justify-content: left;
-      padding: 15px 25px;
-      background-color: #1a1a1a;
-      font-size: 1.1em;
-    }
-
-    nav a {
+      overflow: hidden;
+      position: relative;
       color: white;
-      margin-right: 20px;
+    }
+
+    /* Background Video */
+    video#bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -2;
+      filter: blur(4px) brightness(0.7);
+    }
+
+    /* Top-Left Toolbar */
+    .toolbar {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      display: flex;
+      gap: 30px;
+      z-index: 5;
+    }
+
+    .toolbar a {
       text-decoration: none;
-      transition: transform 0.2s ease;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      transition: transform 0.3s ease;
     }
 
-    nav a:hover {
-      transform: scale(1.15);
-      color: #ffd700;
+    .toolbar a:hover {
+      transform: scale(1.2);
     }
 
-    h1 {
-      margin-top: 120px;
-      font-size: 2.5em;
-      transition: transform 0.4s ease;
+    /* Interactive Heading */
+    .main-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 48px;
+      font-weight: 800;
       cursor: pointer;
-      display: inline-block;
+      transition: all 0.3s ease;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     }
 
-    .message {
-      margin-top: 20px;
-      font-size: 1.1em;
-      color: #bbbbbb;
-      min-height: 20px;
+    .main-heading:hover {
+      animation: jump 0.6s ease;
+    }
+
+    @keyframes jump {
+      0%   { transform: translate(-50%, -50%) scale(1); }
+      30%  { transform: translate(-50%, -60%) scale(1.2); }
+      60%  { transform: translate(-50%, -50%) scale(0.95); }
+      100% { transform: translate(-50%, -50%) scale(1); }
+    }
+
+    /* Message popup */
+    .popup {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(0,0,0,0.6);
+      padding: 10px 20px;
+      border-radius: 10px;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+
+    .popup.show {
+      opacity: 1;
     }
   </style>
 </head>
 <body>
 
-  <!-- Top Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
+  <!-- Background Video -->
+  <video autoplay muted loop id="bg-video">
+    <source src="linmy.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Top-left Toolbar -->
+  <div class="toolbar">
     <a href="gallery.html">Gallery</a>
-    <a href="#">About</a>
-    <a href="#">Inspiring</a>
-  </nav>
+    <a href="#about">About</a>
+    <a href="#inspiring">Inspiring</a>
+  </div>
 
-  <!-- Centered Animated Heading -->
-  <h1 id="heading">Scroll Softly, You Are In My Space</h1>
-  <div class="message" id="msg"></div>
+  <!-- Center Heading -->
+  <div class="main-heading" onclick="showMessage()">✨ Oh no, you can't touch me! ✨</div>
 
+  <!-- Message -->
+  <div class="popup" id="popupMsg">Hehe! Missed me again 😄</div>
+
+  <!-- Script -->
   <script>
-    const heading = document.getElementById("heading");
-    const msg = document.getElementById("msg");
-    const messages = [
-      "Oh no, you can't touch me ✋",
-      "Catch me if you can!",
-      "Not so easy, huh?",
-      "Try again... 😄"
-    ];
-
-    heading.addEventListener("click", () => {
-      const x = Math.random() * (window.innerWidth - 300);
-      const y = Math.random() * (window.innerHeight - 100);
-      heading.style.transform = `translate(${x}px, ${y}px)`;
-
-      const randomMsg = messages[Math.floor(Math.random() * messages.length)];
-      msg.textContent = randomMsg;
-
+    function showMessage() {
+      const popup = document.getElementById("popupMsg");
+      popup.classList.add("show");
       setTimeout(() => {
-        heading.style.transform = `translate(0, 0)`;
-        msg.textContent = "";
-      }, 3000);
-    });
+        popup.classList.remove("show");
+      }, 2000);
+    }
   </script>
+
 </body>
 </html>
-<!-- redeploy attempt -->
