--- a/gallery.html
+++ b/gallery.html
@@ -1,48 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Gallery</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gallery - Linisha</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #121212;
-      color: white;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    h1 {
-      text-align: center;
-      margin-top: 40px;
+    html, body {
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
     }
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 10px;
+    /* Background Video (Mist or Smoke) */
+    #smoke-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       object-fit: cover;
-      transition: transform 0.3s ease;
+      z-index: -2;
+      opacity: 0.6;
+      filter: blur(3px);
     }
 
-    .gallery img:hover {
+    .gallery-container {
+      height: 100vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      padding: 40px;
+      gap: 10px;
+    }
+
+    .gallery-container img {
+      width: 32%;
+      object-fit: cover;
+      border-radius: 15px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+      transition: transform 0.4s ease, filter 0.4s ease;
+      cursor: pointer;
+    }
+
+    /* Step/Stairs effect */
+    .gallery-container img:nth-child(1) {
+      margin-bottom: 60px;
+    }
+
+    .gallery-container img:nth-child(2) {
+      margin-bottom: 30px;
+    }
+
+    .gallery-container img:nth-child(3) {
+      margin-bottom: 0px;
+    }
+
+    /* Hover Effect */
+    .gallery-container img:hover {
       transform: scale(1.05);
+      filter: brightness(1.1);
+    }
+
+    /* Back link */
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 18px;
+      background: rgba(0,0,0,0.4);
+      padding: 6px 14px;
+      border-radius: 8px;
+      z-index: 5;
+    }
+
+    .back-btn:hover {
+      background: rgba(0,0,0,0.7);
     }
   </style>
 </head>
 <body>
-  <h1>Gallery</h1>
-  <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?auto=format&fit=crop&w=800&q=80" alt="Coffee Pot" />
-    <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=800&q=80" alt="Coffee Cup" />
-    <img src="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?auto=format&fit=crop&w=800&q=80" alt="Cafe Table" />
+
+  <!-- Background Video -->
+  <video autoplay muted loop id="smoke-bg">
+    <source src="smoke.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Back to Home -->
+  <a class="back-btn" href="index.html">← Home</a>
+
+  <!-- Gallery -->
+  <div class="gallery-container">
+    <img src="img1.jpg" alt="Photo 1" />
+    <img src="img2.jpg" alt="Photo 2" />
+    <img src="img3.jpg" alt="Photo 3" />
   </div>
+
 </body>
 </html>
